--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: flutter_project_template
-description: A project template for your flutter apps
+name: a_eye
+description: a  machine learning mobile app.
 
 publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 
@@ -13,7 +13,10 @@ dependencies:
   flutter:
     sdk: flutter
 
+
   cupertino_icons: ^1.0.2
+  image_picker: 
+  tflite: 
   get_it: ^7.2.0
   provider: ^6.0.1
   dio: ^4.0.4
@@ -24,8 +27,8 @@ dev_dependencies:
   flutter_test:
     sdk: flutter
 
-  flutter_lints: ^1.0.0
 
+  flutter_lints: ^1.0.0
 
 flutter:
 
@@ -33,20 +36,19 @@ flutter:
   uses-material-design: true
 
 
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
+    - assets/cat_dog_set/
 
 
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
- 
+
+  fonts:
+    - family: PR
+      fonts:
+        - asset: assets/fonts/Poppins-Regular.ttf
+    - family: PB
+      fonts:
+        - asset: assets/fonts/Poppins-Bold.ttf
+    - family: PL
+      fonts:
+        - asset: assets/fonts/Poppins-Thin.ttf
