--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   shared_preferences: ^2.0.8
   flutter_ripple: ^0.0.3
   flutter_staggered_animations: ^1.0.0
+  flutter_staggered_grid_view: ^0.6.0
 
   # tflite: ^1.1.2
 
